# prompt-prompter-dd

./: .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  GEMINI.md  LICENSE  PRODUCTION_SPREADSHEETS_README.md  PROMPT_SCORING_GUIDE.md  README.md  app.py  backfill_traffic.py  config.py  demo.html  demo_with_recording.html  docker-compose.yml  models.py  organize_demo_images.sh  production_assets_generated_visuals.csv  production_assets_recording_clips.csv  production_assets_screen_recordings.csv  production_checklist.csv  production_summary.csv  prompt_engine.py  pyproject.toml  requirements.txt  run_recording.sh  service.yaml  test_keys.py  traffic_gen.py  whyYPFP.md
.github/workflows/: ci.yml
backend/: app.py  config.py  models.py  prompt_engine.py
datadog-config/: dashboard.json  monitors.json  slos.json
demo-recorder/: add_cursor_effects.js  record_demo.js  record_take01_only.js
demo_production/: assemble_final.sh  assemble_perfect_cut.sh  assemble_silent.sh  build_video.py  generate_unified_voiceover.py  generate_voiceover.py  generate_voiceover_edge.py
demo_production/work/: playlist.txt
frontend/: App.tsx  README.md  constants.tsx  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
frontend/components/: AnalysisDisplay.tsx  ExampleTable.tsx  HistorySidebar.tsx  Icons.tsx  MetricsTab.tsx  TemplateManager.tsx  Visualization.tsx
frontend/services/: apiService.ts  datadogService.ts  geminiService.ts
tests/: test_api.py  test_engine.py
